objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>CMN_COMMS_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate work order to get case and case extension fields in formula fields</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientName__c</fullName>
        <description>To Populate Client Name from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_ClientFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientSurname__c</fullName>
        <description>To Populate Client Surname from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_ClientSurname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Surname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ClientTitle__c</fullName>
        <description>To Populate Client Title from the case extension object.
Use this field in email template to send SMS.</description>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_ClientTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_PolicyNumber__c</fullName>
        <description>This is a masked version of the Policy Number, related to the service appointment, and is used in email templates.</description>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_MasterContractNumber__c</formula>
        <label>Policy Number (masked)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_PriorScheduledStartTimeAsText__c</fullName>
        <description>This will convert the Prior Scheduled Start Time to text for use in Email Templates</description>
        <formula>IF
(
  ISNULL(SC_COMMS_PriorScheduledStartTime__c),
  NULL,
  TEXT
  (
    DAY(DATEVALUE(SC_COMMS_PriorScheduledStartTime__c))
  )
  + 
  &quot; &quot;
  +
  CASE
  (
    TEXT(MONTH(DATEVALUE(SC_COMMS_PriorScheduledStartTime__c))),
    &quot;1&quot;, &quot;January&quot;,
    &quot;2&quot;, &quot;February&quot;,
    &quot;3&quot;, &quot;March&quot;,
    &quot;4&quot;, &quot;April&quot;,
    &quot;5&quot;, &quot;May&quot;,
    &quot;6&quot;, &quot;June&quot;,
    &quot;7&quot;, &quot;July&quot;,
    &quot;8&quot;, &quot;August&quot;,
    &quot;9&quot;, &quot;September&quot;,
    &quot;10&quot;, &quot;October&quot;,
    &quot;11&quot;, &quot;November&quot;,
    &quot;December&quot;
  )
  +
  &quot; &quot;
  +
  TEXT
  (
    YEAR(DATEVALUE(SC_COMMS_PriorScheduledStartTime__c))
  )
  + 
  &quot; at &quot;
  + 
  LEFT
  (
    TEXT
    (
      TIMEVALUE(SC_COMMS_PriorScheduledStartTime__c)+ (2 * 60 * 60 * 1000)
    ),
    5
  )
)</formula>
        <label>Prior Scheduled Start Time (as Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_PriorScheduledStartTime__c</fullName>
        <description>Is used the store the previous value for SchedStartTime</description>
        <label>Prior Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_COMMS_ScheduledStartTimeAsText__c</fullName>
        <description>This will convert the Scheduled Start Time to text for use in Email Templates</description>
        <formula>IF
(
  ISNULL(SchedStartTime),
  NULL,
  TEXT
  (
    DAY(DATEVALUE(SchedStartTime))
  )
  + 
  &quot; &quot;
  +
  CASE
  (
    TEXT(MONTH(DATEVALUE(SchedStartTime))),
    &quot;1&quot;, &quot;January&quot;,
    &quot;2&quot;, &quot;February&quot;,
    &quot;3&quot;, &quot;March&quot;,
    &quot;4&quot;, &quot;April&quot;,
    &quot;5&quot;, &quot;May&quot;,
    &quot;6&quot;, &quot;June&quot;,
    &quot;7&quot;, &quot;July&quot;,
    &quot;8&quot;, &quot;August&quot;,
    &quot;9&quot;, &quot;September&quot;,
    &quot;10&quot;, &quot;October&quot;,
    &quot;11&quot;, &quot;November&quot;,
    &quot;December&quot;
  )
  +
  &quot; &quot;
  +
  TEXT
  (
    YEAR(DATEVALUE(SchedStartTime))
  )
  + 
  &quot; at &quot;
  + 
  LEFT
  (
    TEXT
    (
      TIMEVALUE(SchedStartTime) + (2 * 60 * 60 * 1000)
    ),
    5
  )
)</formula>
        <label>Scheduled Start Time (as Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ClientIdentificationNumber__c</fullName>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_ClientIdentificationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PolicyNumber__c</fullName>
        <description>The policy number associated with the Appointment</description>
        <formula>CMN_COMMS_WorkOrder__r.Case.SC_CaseExtension__r.RSC_MasterContractNumber__c</formula>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ServiceResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field for Service Resource Currently Assigned for the Service Appointment</description>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_StatusReason__c</fullName>
        <description>Picklist values and dependencies describing the various statuses of appointments, scheduled for clients.</description>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client refuses blood test</fullName>
                </value>
                <value>
                    <fullName>Client has been to lab for tests</fullName>
                </value>
                <value>
                    <fullName>Client prefers to go to own doctor for tests</fullName>
                </value>
                <value>
                    <fullName>Cannot get hold of client</fullName>
                </value>
                <value>
                    <fullName>Client requires clarity on policy - Financial Adviser to contact client</fullName>
                </value>
                <value>
                    <fullName>Client requires clarity on bloods, broker to contact client</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Our numerous attempts at contacting the client have failed</fullName>
                </value>
                <value>
                    <fullName>Incorrect contact details</fullName>
                </value>
                <value>
                    <fullName>Client keeps cancelling appointments</fullName>
                </value>
                <value>
                    <fullName>No bloods required</fullName>
                </value>
                <value>
                    <fullName>Client coming to Liberty office for tests</fullName>
                </value>
                <value>
                    <fullName>Client going to own doctor for tests</fullName>
                </value>
                <value>
                    <fullName>Client requests cancellation</fullName>
                </value>
                <value>
                    <fullName>Referred to alternative lab</fullName>
                </value>
                <value>
                    <fullName>Distance exceeds 100km per client</fullName>
                </value>
                <value>
                    <fullName>Client confirms that medicals have been completed</fullName>
                </value>
                <value>
                    <fullName>Client has not honoured previous scheduled appointments.</fullName>
                </value>
                <value>
                    <fullName>Client not answering, no voicemail service</fullName>
                </value>
                <value>
                    <fullName>Client not answering, voicemail message left</fullName>
                </value>
                <value>
                    <fullName>Client not at work</fullName>
                </value>
                <value>
                    <fullName>Client in meeting</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s number is continuously engaged</fullName>
                </value>
                <value>
                    <fullName>Client requested to be contacted at a later stage</fullName>
                </value>
                <value>
                    <fullName>Client Unavailable</fullName>
                </value>
                <value>
                    <fullName>Client cancelled appointment</fullName>
                </value>
                <value>
                    <fullName>Nurse is ill</fullName>
                </value>
                <value>
                    <fullName>Nurse was late</fullName>
                </value>
                <value>
                    <fullName>Incomplete medical requirements</fullName>
                </value>
                <value>
                    <fullName>NTU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SC_ServiceAppointment</fullName>
        <active>true</active>
        <description>Record type used for nurses booking appointments</description>
        <label>Service Appointment</label>
    </recordTypes>
</CustomObject>